# sgcl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  example.cpp  sgcl.h
examples/: CMakeLists.txt  concurrent_stack.cpp  example.cpp  lock_free_stack.cpp  treap.cpp
examples/concurrent_stack/: concurrent_stack.cpp
examples/treap/: readme.md  treap.cpp
include/sgcl/: atomic.h  collector.h  configuration.h  make_tracked.h  metadata_base.h  root_ptr.h  sgcl.h  tracked_ptr.h  types.h  unique_deleter.h  unique_ptr.h
sgcl/: array_ptr.h  atomic.h  atomic_ref.h  collector.h  concepts.h  config.h  configuration.h  list.h  make_tracked.h  metadata_base.h  pointer.h  root_allocator.h  root_containers.h  root_ptr.h  sgcl.h  stack_ptr.h  tracked_ptr.h  types.h  unique_deleter.h  unique_ptr.h  unordered_map.h  unsafe_ptr.h  vector.h
sgcl/detail/: array.h  array_base.h  array_iterator.h  array_metadata.h  array_ptr.h  atomic_protector.h  block.h  block_allocator.h  child_pointers.h  collector.h  counter.h  data_page.h  iterator.h  maker.h  max_filter.h  memory_counters.h  merge_sort.h  metadata.h  object_allocator.h  object_allocator_base.h  object_pool_allocator.h  object_pool_allocator_base.h  page.h  page_info.h  pointer.h  pointer_pool.h  pointer_pool_base.h  root_container_allocator.h  stack_pointer_allocator.h  thread.h  timer.h  tracked.h  type_info.h  types.h  unique_deleter.h  unique_ptr.h
sgcl/priv/: array.h  array_metadata.h  block.h  block_allocator.h  child_pointers.h  collector.h  counter.h  data_page.h  maker.h  metadata.h  object_allocator.h  page.h  page_info.h  thread.h  (+6 more)
tests/: CMakeLists.txt  atomic.cpp  atomic_ref.cpp  list.cpp  maker.cpp  pointer.cpp  pointer_array.cpp  tracked_ptr.cpp  tracked_ptr_array.cpp  types.h  unique_ptr.cpp  unique_ptr_array.cpp  unordered_map.cpp  unsafe_ptr.cpp  unsafe_ptr_array.cpp  vector.cpp
(+30 files in other folders)
